# spinify

./: .hgignore  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.unix  README  config.h.in  configure  configure.ac  mkrelease.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cocoa/: SpinCocoaAppDelegate.h  SpinCocoaAppDelegate.m  SpinCocoa_Prefix.pch  main.m
cocoa/English.lproj/: MainMenu.xib
cocoa/SpinCocoa.xcodeproj/: loic.pbxuser  loic.perspectivev3  project.pbxproj
cocoa/SpinWithController/: Measure.h  Measure.m  MyDocument.h  MyDocument.m  SpinController.h  SpinController.m  SpinWithController_Prefix.pch  main.m
cocoa/SpinWithController/English.lproj/: MainMenu.xib  MyDocument.xib
cocoa/SpinWithController/SpinWithController.xcodeproj/: loic.pbxuser  loic.perspectivev3  project.pbxproj
contrib/qhull-2010.1/: COPYING-spinify.txt
contrib/qhull-2010.1/src/: Makefile  userprintf.c
doc/: CONFIG  Makefile.am  Makefile.in  compare_inline.py  spinify.1  spinify.html  spinify2.1  spinifyrc.sample
spinify.vcxproj/: spinify.sln  spinify.vcxproj  spinify.vcxproj.filters
spinify.xcodeproj/: loic.mode1v3  loic.pbxuser  loic.perspectivev3  project.pbxproj
spinify2.xcodeproj/: loic.mode1v3  loic.pbxuser  project.pbxproj
src/: ConfParser.cpp  ConfParser.h  Graph.cpp  Graph.h  Makefile  Makefile.am  Makefile.in  Makefile.unix  Maths.cpp  Maths.h  Point3D.cpp  Point3D.h  Simul.cpp  Simul.h  Surface.cpp  Surface.h  main.cpp  tezuka.cpp  tezuka.h
src/win32/: Makefile.win  spinify.dev  spinify.layout  tezuka.cpp  tezuka.h
test/: Makefile  graphtest.cpp  graphtest.h  parsertest.cpp  planedelaunaytest.cpp  point3dtest.cpp  randtest.cpp  recttest.cpp  simultest.cpp  spheretest.cpp  swendsentest.cpp
tests/: Makefile.am  Makefile.in  Makefile.unix  graphtest.cpp  parsertest.cpp  planedelaunaytest.cpp  simultest.cpp  spheretest.cpp  swendsentest.cpp
(+2 files in other folders)
