AC_INIT([spinify], [2.2], [spinify-discuss@googlegroups.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([pow])
AC_CHECK_FUNCS([sqrt])
AC_CHECK_FUNCS([strtol])
AC_CHECK_HEADERS([sys/time.h])
AC_C_CONST
AC_FUNC_STRTOD
AC_HEADER_STDBOOL
AC_HEADER_TIME
AC_TYPE_SIZE_T
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	src/Makefile
	doc/Makefile
	tests/Makefile
])
AC_OUTPUT
